force-app/main/default/objects/Account/fields/AR_Email__c.field-meta.xml
<CustomField>
    <fullName>AR_Email__c</fullName>
    <label>AP Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>