force-app/main/default/objects/Account/fields/Burn_Hours__c.field-meta.xml
<CustomField>
    <fullName>Burn_Hours__c</fullName>
    <label>Current Burn Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>