force-app/main/default/objects/Account/fields/Current_Burn_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Burn_Rate__c</fullName>
    <formula
  >IF(Burn_Hours__c &lt;1 || Project_Hours_for_Open_Projects__c &lt; 1, 0,Burn_Hours__c / Project_Hours_for_Open_Projects__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Burn Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>