force-app/main/default/objects/Account/fields/Diff_of_Revenue_From_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Diff_of_Revenue_From_Last_Year__c</fullName>
    <formula>Year_to_Date_Revenue__c -  Last_Year_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff of Revenue From Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>