force-app/main/default/objects/Account/fields/dupcheck__dc3UltimateParent__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__dc3UltimateParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>dc3UltimateParent</relationshipName>
    <type>Lookup</type>
</CustomField>