force-app/main/default/objects/Account/fields/Prefered_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Delivery_Method__c</fullName>
    <label>Prefered Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>