force-app/main/default/objects/Account/fields/Project_Hours_for_Open_Projects__c.field-meta.xml
<CustomField>
    <fullName>Project_Hours_for_Open_Projects__c</fullName>
    <label>Projected Hours for Open Projects</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>