force-app/main/default/objects/Account/fields/Quickbooks_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Account_Number__c</fullName>
    <description>This will hold the QuickBooks external id</description>
    <externalId>true</externalId>
    <inlineHelpText>This will hold the QuickBooks external id</inlineHelpText>
    <label>Quickbooks Account Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>