force-app/main/default/objects/Account/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>Net 60</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Net 15</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Due on reciept</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>