force-app/main/default/objects/Account/fields/Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed__c</fullName>
    <label>Total Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>